vessels/signaturepdf/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: signaturepdf
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  rules:
    - host: pdf.super.fish
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: signaturepdf
                port:
                  name: http
  tls:
    - hosts:
        - pdf.super.fish
      secretName: pdf.super.fish
